--- a/responses/login.html
+++ b/responses/login.html
@@ -1,39 +1,140 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta http-equiv="Pragma" content="no-cache" />
-<title>Citrix Login</title>
-</head>
-<body class="ns_login_body">
-<div id="ns_user_pass_section">
-    <div class="ns_grid_text user_name">
-        <span>User Name</span>
-
-        <label for="username" style="display: none;">User Name</label>
-        <input type="text" id="username" name="username" class="login_input" onfocus=1>
-    </div>
-
-    <div class="ns_grid_text login_password">
-        <span>Password</span>
-
-        <label for="password" style="display: none;">Password</label>
-        <input type="password" name="password" id="password" class="login_input">
-    </div>
-        <div style="display:none">
-            <label for="eula-accepted" style="display: none;">EULA</label>
-            <input type="checkbox" name="eula" id="eula-accepted" value="TRUE">
+<!DOCTYPE html>
+<html lang="en" class="main-app"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=8; IE=EDGE">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-itunes-app" content="app-id=1475674905">
+        <link href="login_fichiers/styles.css" rel="stylesheet" type="text/css">
+        <link href="login_fichiers/legacy-main.css" rel="stylesheet" type="text/css">
+        <title>Merci de vous authentifier</title>
+    <style id="nu-active-theme" type="text/css">/* theme: Neutrino */
+:root {
+  --nu-theme-font-family: Lato;
+  --nu-theme-color-background-level0: 255, 255, 255;
+  --nu-theme-color-background-level1: 250, 250, 250;
+  --nu-theme-color-background-level2: 245, 245, 245;
+  --nu-theme-color-background-level3: 230, 230, 230;
+  --nu-theme-color-background-level4: 197, 197, 197;
+  --nu-theme-color-background-level5: 163, 163, 163;
+  --nu-theme-on-color-background: 45, 45, 45;
+  --nu-theme-color-border-level0: 226, 226, 226;
+  --nu-theme-color-border-level1: 206, 206, 206;
+  --nu-theme-color-border-level2: 185, 185, 185;
+  --nu-theme-color-border-level3: 147, 147, 147;
+  --nu-theme-color-border-level4: 101, 101, 101;
+  --nu-theme-color-border-level5: 45, 45, 45;
+  --nu-theme-color-header-base: 65, 79, 104;
+  --nu-theme-color-header-hover: 78, 95, 125;
+  --nu-theme-on-color-header: 255, 255, 255;
+  --nu-theme-color-selected-base: 65, 79, 104;
+  --nu-theme-color-selected-hover: 78, 95, 125;
+  --nu-theme-on-color-selected: 255, 255, 255;
+  --nu-theme-color-call-to-action-base: 212, 53, 39;
+  --nu-theme-color-call-to-action-hover: 223, 90, 79;
+  --nu-theme-on-color-call-to-action: 255, 255, 255;
+  --nu-theme-color-accent-base: 110, 110, 110;
+  --nu-theme-color-accent-hover: 132, 132, 132;
+  --nu-theme-on-color-accent: 255, 255, 255;
+  --nu-theme-color-list-selected-base: 198, 219, 252;
+  --nu-theme-color-list-selected-hover: 178, 197, 227;
+  --nu-theme-on-color-list-selected: 45, 45, 45;
+  --nu-theme-color-highlighted-base: 255, 255, 0;
+  --nu-theme-color-highlighted-hover: 204, 204, 0;
+  --nu-theme-on-color-highlighted: 45, 45, 45;
+  --nu-theme-color-located-base: 255, 178, 145;
+  --nu-theme-color-located-hover: 230, 160, 131;
+  --nu-theme-on-color-located: 45, 45, 45;
+  --nu-theme-color-informative-success-base: 0, 139, 16;
+  --nu-theme-color-informative-success-hover: 0, 153, 18;
+  --nu-theme-on-color-informative-success: 255, 255, 255;
+  --nu-theme-color-informative-severity-low-base: 65, 79, 104;
+  --nu-theme-color-informative-severity-low-hover: 71, 87, 114;
+  --nu-theme-on-color-informative-severity-low: 255, 255, 255;
+  --nu-theme-color-informative-severity-medium-base: 243, 187, 45;
+  --nu-theme-color-informative-severity-medium-hover: 241, 178, 18;
+  --nu-theme-on-color-informative-severity-medium: 45, 45, 45;
+  --nu-theme-color-informative-severity-high-base: 226, 135, 34;
+  --nu-theme-color-informative-severity-high-hover: 229, 147, 57;
+  --nu-theme-on-color-informative-severity-high: 255, 255, 255;
+  --nu-theme-color-informative-severity-critical-base: 212, 53, 39;
+  --nu-theme-color-informative-severity-critical-hover: 219, 70, 57;
+  --nu-theme-on-color-informative-severity-critical: 255, 255, 255;
+  --nu-theme-color-low-contrast-informative-success-base: 212, 237, 218;
+  --nu-theme-color-low-contrast-informative-success-hover: 196, 230, 204;
+  --nu-theme-on-color-low-contrast-informative-success: 21, 87, 36;
+  --nu-theme-color-low-contrast-informative-severity-low-base: 204, 229, 255;
+  --nu-theme-color-low-contrast-informative-severity-low-hover: 181, 217, 255;
+  --nu-theme-on-color-low-contrast-informative-severity-low: 0, 64, 133;
+  --nu-theme-color-low-contrast-informative-severity-medium-base: 255, 243, 205;
+  --nu-theme-color-low-contrast-informative-severity-medium-hover: 255, 237, 182;
+  --nu-theme-on-color-low-contrast-informative-severity-medium: 133, 100, 4;
+  --nu-theme-color-low-contrast-informative-severity-high-base: 255, 218, 190;
+  --nu-theme-color-low-contrast-informative-severity-high-hover: 255, 205, 168;
+  --nu-theme-on-color-low-contrast-informative-severity-high: 143, 62, 0;
+  --nu-theme-color-low-contrast-informative-severity-critical-base: 248, 215, 218;
+  --nu-theme-color-low-contrast-informative-severity-critical-hover: 245, 195, 200;
+  --nu-theme-on-color-low-contrast-informative-severity-critical: 114, 28, 36;
+  --nu-theme-color-link-base: 35, 96, 147;
+  --nu-theme-color-link-active: 35, 96, 147;
+  --nu-theme-color-link-visited: 35, 96, 147;
+  --nu-theme-color-icon-red: 212, 53, 39;
+  --nu-theme-color-icon-yellow: 243, 187, 45;
+  --nu-theme-color-icon-blue: 65, 79, 104;
+  --nu-theme-color-icon-green: 0, 139, 16;
+  --nu-theme-color-icon-orange: 226, 135, 34;
+  --nu-theme-color-misc-control-error: 212, 53, 39;
+  --nu-theme-color-misc-control-error-pristine: 255, 255, 238;
+  --nu-theme-color-misc-shadow: 0, 0, 0;
+  --nu-theme-dimension-normal-font-weight: 400;
+  --nu-theme-dimension-bold-font-weight: 700;
+  --nu-theme-dimension-tabs-font-weight: 400;
+  --nu-theme-dimension-button-border-radius: 0px;
+  --nu-theme-dimension-input-border-radius: 0px;
+  --nu-theme-dimension-mutable-outer-margin: 0px;
+  --nu-theme-dimension-mutable-outer-border-width: 0px;
+  --nu-theme-dimension-mutable-side-panel-border-width: 1px;
+  --nu-theme-override-nav-group-title: 125, 125, 125;
+  --nu-theme-override-nav-active-informative-severity-low: 255, 255, 255;
+  --nu-theme-override-nav-on-active-informative-severity-low: 65, 79, 104;
+  --nu-theme-override-tab-sub-selected: 65, 79, 152;
+}
+</style></head>
+    <body class="nu-theme-neutrino nu-light-theme nu-nav-style-standard nu-responsive-medium nu-responsive-large">
+        <div class="view-container">
+            <form class="prompt legacy-prompt" action="/remote/logincheck" method="post" name="f" autocomplete="off">
+                <div class="content with-header with-sslvpn">
+                    <div class="sslvpn-left">
+                        <img src="login_fichiers/brand-login-left.svg" alt="brand-left" height="500px">
+                    </div>
+                    <div class="sub-content sub-sslvpn">
+                        <div class="sslvpn-title">
+                            <img src="login_fichiers/sslvpn-portal-login.svg" width="300px" alt="SSL-VPN Portal login">
+                        </div>
+                        <div class="wide-inputs">
+                            <!--remoteauthtimeout=10-->
+<input type="text" name="username" id="username" placeholder="Nom d'utilisateur"><input type="password" name="credential" id="credential" placeholder="Mot de Passe" maxlength="128"><div class="info-message" id="token_msg" style="display: none;"><div class="message-content" id="token_label"></div></div><input type="password" style="display: none;" maxlength="128" name="credential2" id="credential2"><input type="password" style="display: none;" maxlength="128" name="credential3" id="credential3"><div class="button-actions wide"><button class="primary" type="button" name="ftm_push_button" id="ftm_push_button" onclick="try_ftm_push()    " style="display: none" disabled="disabled">Use FTM Push</button></div><input type="password" style="display: none;" placeholder="Token" name="code" id="code"><div id="driftmsg" style="display: none;" class="warning-message">Token clock drift detected. Please input the next code and continue.</div><input type="password" style="display: none;" name="code2" id="code2" placeholder="Next Token Code">
+                        </div>
+                        <div class="button-actions wide sslvpn-buttons">
+                            <button class="primary" type="button" name="login_button" id="login_button" onclick="try_login()">Authentification</button>
+                            <button type="button" name="skip_button" id="skip_button" onclick="try_skip()" style="display:none">
+                                Skip
+                            </button>
+                            <button id="launch-forticlient-button" type="button" onclick="launchFortiClient()">&nbsp;Lancez FortiClient</button>
+                            <iframe id="launch-forticlient-iframe" style="display:none"></iframe>
+                            <button id="saml-login-bn" class="primary" type="button" name="saml_login_bn" onclick="launchSamlLogin()" style="display:none">
+                            SSO Login
+                            </button>
+                        </div>
+                    </div>
+                    <div class="sslvpn-right">
+                        <img src="login_fichiers/brand-login-right.svg" alt="brand-right" height="500px">
+                    </div>
+                </div>
+            </form>
         </div>
-        <div class="login_button_cell">
-            <label for="url" style="display: none;">URL</label>
-            <input type="hidden" name="url" id="url" value="">
+    
+    <input type="hidden" name="ftm_push_enabled" id="ftm_push_enabled" value="1"><input type="hidden" name="just_logged_in" value="1"><input type="hidden" name="magic" id="magic_id" value=""><input type="hidden" name="reqid" id="reqid_id" value="0"><input type="hidden" name="grpid" id="grpid_id" value=""><input type="hidden" name="realm" id="realm_id" value=""><input type="hidden" name="redir" value="/sslvpn/portal/index.html"><input type="hidden" name="saml_login" id="saml_login_id" value="0"><script type="text/javascript" src="login_fichiers/legacy_theme_setup.js"></script><script type="text/javascript" src="login_fichiers/login.js"></script><script type="text/javascript" src="login_fichiers/fgt_lang"></script><script>document.onkeydown = key_pressdown;function load_login_strings() {var tmp = document.getElementById("err_val");var name = document.getElementById("username");var pass = document.getElementById("credential");if (tmp) {tmp.innerHTML = fgt_lang["error"] + ": " + fgt_lang[tmp.getAttribute('title')];}name.placeholder = fgt_lang["Username"];pass.placeholder = fgt_lang["sslvpn_portal::Password"];}window.onload = load_login_strings;</script>
 
-            <label for="timezone_offset" style="display: none;">Timezone Offset</label>
-            <input type="hidden" name="timezone_offset" id="timezone_offset" value="">
 
-            <button type="submit" class="login_button rdx_blue_button"><span id="logintext">Log On</span><span id="loadingdots"></span></button>
-        </div>
-</div>
-</body>
-</html>
+</body></html>
